--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button class="shopping_button" id="show">레고 제품 쇼핑</button>
                 <ul>
                     <li><a href="./teamProject/aboutUs.html">레고 브랜드 소개</a></li>
-                    <li><a href="#">고객 지원</a></li>
+                    <li><a href="#">고객 지</a></li>
                 </ul>
             </div>
 
