--- a/index.html
+++ b/index.html
@@ -59,14 +59,16 @@
                                 <img src="./teamProject/image/close.png" alt="close">
                             </button>
                         </div>
-                        
+
                         <div class="menu_list2">
                             <ul class="menu_list2_1">
                                 <li><button onclick='btnClick()'>시리즈별 세트</button></li>
                                 <li><button onclick="location.href='./teamProject/productList.html'">신상품</button></li>
-                                <li><button onclick="location.href='./teamProject/productList.html'">베스트 셀러</button></li>
+                                <li><button onclick="location.href='./teamProject/productList.html'">베스트 셀러</button>
+                                </li>
                                 <li><button onclick="location.href='./teamProject/pastSeries.html'">추억의 레고</button></li>
-                                <li><button onclick="location.href='./teamProject/productList.html'">할인 및 행사</button></li>
+                                <li><button onclick="location.href='./teamProject/productList.html'">할인 및 행사</button>
+                                </li>
                             </ul>
                         </div>
 
@@ -120,13 +122,21 @@
 
                 </div>
             </div>
+            <div class="header_right">
+                <div class="header_search">
+                    <button type="submit" class="search_button" id="show3">
+                        <img src="./teamProject/headerImg/search.png" alt="search">
+                    </button>
+                </div>
 
-            <div class="header_search">
-                <button type="submit" class="search_button" id="show3">
-                    <img src="./teamProject/headerImg/search.png" alt="search">
-                </button>
+                <div class="header_login">
+                    <ul>
+                        <li><a href="#" class="loginClick">로그인</a></li>
+                        <li><a href="#"><img src="./teamProject/image/shopping.png" alt="shopping"
+                                    onclick="location.href='./teamProject/marketbox.html'"></a></li>
+                    </ul>
+                </div>
             </div>
-
             <div class="modal_bg" id="modalBg"></div>
 
             <div class="modal_box" id="modalWrap">
@@ -150,13 +160,6 @@
                 </div>
             </div>
 
-            <div class="header_login">
-                <ul>
-                    <li><a href="#">로그인</a></li>
-                    <li><a href="#"><img src="./teamProject/image/shopping.png" alt="shopping"
-                                onclick="location.href='./teamProject/marketbox.html'"></a></li>
-                </ul>
-            </div>
 
         </header>
     </div>
@@ -274,7 +277,7 @@
 
                     <div class="bannersList">
 
-                        <div class="weekendProduct" onclick="location.href='./productList.html'"
+                        <div class="weekendProduct" onclick="location.href='../teamProject/productList.html'"
                             style="cursor:pointer;">
                             <div>
                                 <img src="./teamProject/image/mainFirstBannerPic1.webp" alt="마법 같은 바닷속 궁전">
@@ -294,7 +297,7 @@
                             </a>
                         </div>
 
-                        <div class="weekendProduct" onclick="location.href='./productList.html'"
+                        <div class="weekendProduct" onclick="location.href='../teamProject/productList.html'"
                             style="cursor:pointer;">
                             <div>
                                 <img src="./teamProject/image/mainFirstBannerPic2.webp" alt="손끝에서 탄생하는 지구">
@@ -354,7 +357,7 @@
 
 
 
-            
+
             <article>
                 <h2>주요 세트</h2>
 
@@ -365,7 +368,8 @@
 
                         <div class="mainBox box1">
                             <div class="firstBox">
-                                <a href="./teamProject/productDetail/venom.html"><img src="./teamProject/slideImage/agraba.png" alt=""></a>
+                                <a href="./teamProject/productDetail/venom.html"><img
+                                        src="./teamProject/slideImage/agraba.png" alt=""></a>
                             </div>
 
                             <div class="secondBox">
@@ -382,7 +386,8 @@
 
                         <div class="mainBox box1">
                             <div class="firstBox">
-                                <a href="./teamProject/productDetail/venom.html"><img src="./teamProject/slideImage/cherryBlossoms.png" alt=""></a>
+                                <a href="./teamProject/productDetail/venom.html"><img
+                                        src="./teamProject/slideImage/cherryBlossoms.png" alt=""></a>
                             </div>
 
                             <div class="secondBox">
@@ -399,7 +404,8 @@
 
                         <div class="mainBox box1">
                             <div class="firstBox">
-                                <a href="./teamProject/productDetail/venom.html"><img src="./teamProject/slideImage/arialCastle.png" alt=""></a>
+                                <a href="./teamProject/productDetail/venom.html"><img
+                                        src="./teamProject/slideImage/arialCastle.png" alt=""></a>
                             </div>
 
                             <div class="secondBox">
@@ -416,7 +422,8 @@
 
                         <div class="mainBox box1">
                             <div class="firstBox">
-                                <a href="./teamProject/productDetail/venom.html"><img src="./teamProject/slideImage/japanPost.png" alt=""></a>
+                                <a href="./teamProject/productDetail/venom.html"><img
+                                        src="./teamProject/slideImage/japanPost.png" alt=""></a>
                             </div>
 
                             <div class="secondBox">
@@ -498,7 +505,8 @@
 
                         <div class="mainBox box2">
                             <div class="firstBox">
-                                <a href="./teamProject/productDetail/venom.html"><img src="./teamProject/slideImage/japanPost.png" alt=""></a>
+                                <a href="./teamProject/productDetail/venom.html"><img
+                                        src="./teamProject/slideImage/japanPost.png" alt=""></a>
                             </div>
 
                             <div class="secondBox">
@@ -521,7 +529,8 @@
 
                         <div class="mainBox box3">
                             <div class="firstBox">
-                                <a href="./teamProject/productDetail/venom.html"><img src="./teamProject/slideImage/agraba.png" alt=""></a>
+                                <a href="./teamProject/productDetail/venom.html"><img
+                                        src="./teamProject/slideImage/agraba.png" alt=""></a>
                             </div>
 
                             <div class="secondBox">
@@ -538,7 +547,8 @@
 
                         <div class="mainBox box3">
                             <div class="firstBox">
-                                <a href="./teamProject/productDetail/venom.html"><img src="./teamProject/slideImage/cherryBlossoms.png" alt=""></a>
+                                <a href="./teamProject/productDetail/venom.html"><img
+                                        src="./teamProject/slideImage/cherryBlossoms.png" alt=""></a>
                             </div>
 
                             <div class="secondBox">
@@ -555,7 +565,8 @@
 
                         <div class="mainBox box3">
                             <div class="firstBox">
-                                <a href="./teamProject/productDetail/venom.html"><img src="./teamProject/slideImage/arialCastle.png" alt=""></a>
+                                <a href="./teamProject/productDetail/venom.html"><img
+                                        src="./teamProject/slideImage/arialCastle.png" alt=""></a>
                             </div>
 
                             <div class="secondBox">
@@ -572,7 +583,8 @@
 
                         <div class="mainBox box3">
                             <div class="firstBox">
-                                <a href="./teamProject/productDetail/venom.html"><img src="./teamProject/slideImage/japanPost.png" alt=""></a>
+                                <a href="./teamProject/productDetail/venom.html"><img
+                                        src="./teamProject/slideImage/japanPost.png" alt=""></a>
                             </div>
 
                             <div class="secondBox">
@@ -595,7 +607,8 @@
 
                         <div class="mainBox box4">
                             <div class="firstBox">
-                                <a href="./teamProject/productDetail/venom.html"><img src="./teamProject/slideImage/agraba.png" alt=""></a>
+                                <a href="./teamProject/productDetail/venom.html"><img
+                                        src="./teamProject/slideImage/agraba.png" alt=""></a>
                             </div>
 
                             <div class="secondBox">
@@ -612,7 +625,8 @@
 
                         <div class="mainBox box4">
                             <div class="firstBox">
-                                <a href="./teamProject/productDetail/venom.html"><img src="./teamProject/slideImage/cherryBlossoms.png" alt=""></a>
+                                <a href="./teamProject/productDetail/venom.html"><img
+                                        src="./teamProject/slideImage/cherryBlossoms.png" alt=""></a>
                             </div>
 
                             <div class="secondBox">
@@ -629,7 +643,8 @@
 
                         <div class="mainBox box4">
                             <div class="firstBox">
-                                <a href="./teamProject/productDetail/venom.html"><img src="./teamProject/slideImage/arialCastle.png" alt=""></a>
+                                <a href="./teamProject/productDetail/venom.html"><img
+                                        src="./teamProject/slideImage/arialCastle.png" alt=""></a>
                             </div>
 
                             <div class="secondBox">
@@ -646,7 +661,8 @@
 
                         <div class="mainBox box4">
                             <div class="firstBox">
-                                <a href="./teamProject/productDetail/venom.html"><img src="./teamProject/slideImage/japanPost.png" alt=""></a>
+                                <a href="./teamProject/productDetail/venom.html"><img
+                                        src="./teamProject/slideImage/japanPost.png" alt=""></a>
                             </div>
 
                             <div class="secondBox">
