--- a/teamProject/accountcreate.html
+++ b/teamProject/accountcreate.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>accountcreate</title>
 
+    <link rel="icon" href="../teamProject/image/brand-lego.png">
     <link rel="stylesheet" href="accountcreate.css">
 </head>
 
