--- a/teamProject/forgotpsw.html
+++ b/teamProject/forgotpsw.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>forgotpsw</title>
+
+    <link rel="icon" href="../teamProject/image/brand-lego.png">
     <link rel="stylesheet" href="./forgotpsw.css">
 
 
